microservices/observibility/servicemesh-networkingpolicies/network-policies/allow-linkerd-viz-scrape.yaml
# Allow Prometheus in monitoring namespace to scrape Linkerd Viz metrics-api.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: linkerd-viz
  labels:
    app.kubernetes.io/part-of: ecommerce-network-policy
spec:
  podSelector:
    matchLabels:
      component: metrics-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8085
